# simple-parachain

./: .gitignore  README.md
node/: Cargo.toml
node/src/: rpc.rs  service.rs
pallets/escrow/: Cargo.toml  README.md
pallets/escrow/src/: lib.rs  mock.rs  tests.rs
pallets/template/rpc/: Cargo.toml
pallets/template/rpc/runtime-api/: Cargo.toml
pallets/template/rpc/runtime-api/src/: lib.rs
pallets/template/rpc/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
