[package]
authors = ['My Team']
edition = '2021'
name    = 'pallet-template-rpc-runtime-api'
version = '1.8.1'

[dependencies]
codec 				= { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
sp-api 				= { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }
sp-runtime          = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = 'polkadot-v0.9.16' }

[features]
default = ['std']
std     = ['codec/std', 'sp-api/std', 'sp-runtime/std']

[lib]
doctest = false
